Bug 404157 - "Border around <select multiple> is missing since 2007-11-07" (fix treeview borders on gnome 2.20) [p=twanno@lycos.nl (Teune van Steeg) r=Ventron sr=roc a=blocking1.9+]